--- a/package.json
+++ b/package.json
@@ -10,16 +10,21 @@
   },
   "dependencies": {
     "@vueuse/core": "^9.5.0",
+    "shiki-es": "^0.1.2",
     "vue": "^3.2.41"
   },
   "devDependencies": {
     "@chris-zhu/eslint-config": "^1.0.7",
+    "@types/prettier": "^2.7.1",
     "@unocss/preset-wind": "^0.46.5",
     "@unocss/reset": "^0.46.5",
     "@vitejs/plugin-vue": "^3.2.0",
+    "prettier": "^2.7.1",
     "typescript": "^4.6.4",
     "unocss": "^0.46.5",
     "unocss-preset-useful": "^0.0.7",
+    "unplugin-auto-import": "^0.11.4",
+    "unplugin-vue-components": "^0.22.9",
     "vite": "^3.2.3",
     "vue-tsc": "^1.0.9"
   }
