--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "unocss-animates",
-  "private": true,
   "type": "module",
   "version": "0.0.0",
+  "private": true,
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
@@ -14,18 +14,19 @@
     "vue": "^3.3.4"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^0.43.0",
     "@chris-zhu/eslint-config": "^1.0.7",
     "@types/prettier": "^3.0.0",
-    "@unocss/preset-wind": "^0.55.7",
-    "@unocss/reset": "^0.55.7",
+    "@unocss/preset-wind": "^0.56.0",
+    "@unocss/reset": "^0.56.0",
     "@vitejs/plugin-vue": "^4.3.4",
     "prettier": "^3.0.3",
     "typescript": "^5.2.2",
-    "unocss": "^0.55.7",
+    "unocss": "^0.56.0",
     "unocss-preset-useful": "^0.2.5",
     "unplugin-auto-import": "^0.16.6",
     "unplugin-vue-components": "^0.25.2",
     "vite": "^4.4.9",
-    "vue-tsc": "^1.0.9"
+    "vue-tsc": "^1.8.13"
   }
 }
