--- a/package.json
+++ b/package.json
@@ -6,27 +6,31 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:preview": "vitepress preview docs"
   },
   "dependencies": {
-    "@vueuse/core": "^10.4.1",
+    "@vueuse/core": "^10.7.0",
     "shiki-es": "^0.14.0",
-    "vue": "^3.3.4"
+    "vue": "^3.3.13"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.43.0",
+    "@antfu/eslint-config": "^2.4.6",
     "@chris-zhu/eslint-config": "^1.0.7",
     "@types/prettier": "^3.0.0",
-    "@unocss/preset-wind": "^0.56.0",
-    "@unocss/reset": "^0.56.0",
-    "@vitejs/plugin-vue": "^4.3.4",
-    "prettier": "^3.0.3",
-    "typescript": "^5.2.2",
-    "unocss": "^0.56.0",
-    "unocss-preset-useful": "^0.2.5",
-    "unplugin-auto-import": "^0.16.6",
-    "unplugin-vue-components": "^0.25.2",
-    "vite": "^4.4.9",
-    "vue-tsc": "^1.8.13"
+    "@unocss/preset-wind": "^0.58.0",
+    "@unocss/reset": "^0.58.0",
+    "@vitejs/plugin-vue": "^4.5.2",
+    "prettier": "^3.1.1",
+    "typescript": "^5.3.3",
+    "unocss": "^0.58.0",
+    "unocss-preset-useful": "^0.3.5",
+    "unplugin-auto-import": "^0.17.2",
+    "unplugin-vue-components": "^0.26.0",
+    "vite": "^5.0.10",
+    "vitepress": "1.0.0-rc.32",
+    "vue-tsc": "^1.8.25"
   }
 }
