--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "unocss-animates",
-  "type": "module",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -11,13 +10,13 @@
   "dependencies": {
     "@vueuse/core": "^10.7.0",
     "shiki-es": "^0.14.0",
+    "unplugin-unocss-config": "^0.0.7",
     "vue": "^3.3.13"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.4.6",
     "@chris-zhu/eslint-config": "^1.0.7",
     "@types/prettier": "^3.0.0",
-    "@unocss/preset-wind": "^0.58.0",
     "@unocss/reset": "^0.58.0",
     "@vitejs/plugin-vue": "^4.5.2",
     "prettier": "^3.1.1",
