--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@antfu/eslint-config": "^2.4.6",
     "@chris-zhu/eslint-config": "^1.0.7",
     "@types/prettier": "^3.0.0",
+    "@unocss/preset-mini": "^0.58.0",
     "@unocss/reset": "^0.58.0",
     "@vitejs/plugin-vue": "^4.5.2",
     "prettier": "^3.1.1",
