--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "unocss-animates",
+  "type": "module",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint --cache .",
+    "lint:fix": "pnpm lint --fix"
   },
   "dependencies": {
     "@vueuse/core": "^10.7.0",
@@ -17,6 +20,7 @@
     "@antfu/eslint-config": "^2.4.6",
     "@chris-zhu/eslint-config": "^1.0.7",
     "@types/prettier": "^3.0.0",
+    "@unocss/eslint-plugin": "^0.58.0",
     "@unocss/preset-mini": "^0.58.0",
     "@unocss/reset": "^0.58.0",
     "@vitejs/plugin-vue": "^4.5.2",
