--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "devDependencies": {
     "@antfu/eslint-config": "^2.4.6",
     "@chris-zhu/eslint-config": "^1.0.7",
+    "@iconify-json/carbon": "^1.1.27",
+    "@iconify-json/logos": "^1.1.41",
     "@types/prettier": "^3.0.0",
     "@unocss/eslint-plugin": "^0.58.0",
     "@unocss/preset-mini": "^0.58.0",
