--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "unocss-animates",
+  "type": "module",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -12,7 +13,7 @@
   "dependencies": {
     "@vueuse/core": "^10.7.0",
     "shikiji": "^0.9.11",
-    "unplugin-unocss-config": "^0.0.7",
+    "unplugin-unocss-config": "^0.0.8",
     "vue": "^3.3.13"
   },
   "devDependencies": {
@@ -21,10 +22,11 @@
     "@iconify-json/carbon": "^1.1.27",
     "@iconify-json/logos": "^1.1.41",
     "@types/prettier": "^3.0.0",
+    "@unocss/core": "^0.58.0",
     "@unocss/eslint-plugin": "^0.58.0",
     "@unocss/preset-mini": "^0.58.0",
     "@unocss/reset": "^0.58.0",
-    "@vitejs/plugin-vue": "^4.5.2",
+    "@vitejs/plugin-vue": "^5.0.0",
     "prettier": "^3.1.1",
     "typescript": "^5.3.3",
     "unocss": "^0.58.0",
